# intro-langchain-vector

./: doc_ingestions.py  doc_loading.py  ingestion.py  logger.py  main.py  main_doc_helper.py  main_pdf.py  pinecone_test.py  pyproject.toml
backend/: core.py
data/: medium-blog1.txt
faiss_index_react/: index.faiss  index.pkl
