[project]
name = "intro-to-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "black>=25.1.0",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "langchain-text-splitters>=0.3.9",
    "langchainhub>=0.1.21",
    "pypdf>=6.0.0",
]
