[project]
name = "intro-to-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "certifi>=2025.8.3",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.9",
    "langchainhub>=0.1.21",
    "pypdf>=6.0.0",
    "rich>=14.1.0",
]
